--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -11,17 +11,21 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field w-50">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class:"form-control" %>
+  </div>
+
+  <div class="field w-50">
+    <%= form.label :content %>
+    <%= form.text_area :content, class:"form-control" %>
   </div>
 
   <div class="field">
-    <%= form.label :content %>
-    <%= form.text_area :content %>
-  </div>
+  <%= form.file_field :images, multiple: true %>
+  </div><br>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit '登録する', class:"btn btn-primary" %>
   </div>
 <% end %>
