--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,29 +1,69 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Blogs</h1>
+<div id="carouselExampleIndicators" class="carousel slide my-4 " data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img class="d-block img-fluid" src="/assets/pc.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="/assets/pc-2.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="/assets/pc.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
+<div class="row">
+  <div class="col-3">
+  <h4 class="my-4">カテゴリーで探す</h4>
+       <div class="list-group">
+         <a href="#" class="list-group-item">Category 1</a>
+         <a href="#" class="list-group-item">Category 2</a>
+         <a href="#" class="list-group-item">Category 3</a>
+       </div><br>
+    <%= link_to '新規投稿', new_blog_path, class:"btn btn-primary" %>
+  </div>
+  <div class="col-9">
+    <h3>ブログ一覧</h3><br>
+    <div class="row row-cols-2 row-cols-md-3 g-4">
     <% @blogs.each do |blog| %>
-      <tr>
-        <td><%= blog.name %></td>
-        <td><%= blog.content %></td>
-        <td><%= link_to 'Show', blog %></td>
-        <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-        <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Blog', new_blog_path %>
+        <div class="col mb-3">
+          <div class="card h-100 shadow">
+            <% blog.images.each do |image| %>
+            <p class="card-img-top"><%= image_tag image.variant(resize:'200x200') %></p>
+            <% end %>
+            <div class="card-body text-secondary">
+              <p class="card-text"><small><%= blog.content %></small></p>
+              <div class="card-footer">
+                <div>
+                  <small><%= blog.created_at.strftime('%Y/%m/%d') %>_by</small>
+                  <span style="color:black;"></span>
+                </div>
+                <i class="fas fa-heart unlike-btn"></i><span>　</span>
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small><br>
+                <%= link_to '詳細', blog, class:"btn btn-outline-primary btn-sm" %>
+                <%= link_to '編集', edit_blog_path(blog.id), class: "btn btn-outline-success btn-sm" %>
+                <%= link_to '削除', blog_path(blog.id), class: "btn btn-outline-danger btn-sm" , method: :delete, data: {confirm: "本当に削除していいですか？"} %>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div><br>
+  </div>
+</div>
