--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
   <div style="text-align:center;">
-  <h2>AWS Sample App</h2>
+  <h2 style="font-family:cursive;">AWS Sample App</h2>
   </div>
   <div style="text-align:right;">  
     <% if user_signed_in? %>
