--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,21 +3,31 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field w-50">
-    <%= f.label :email %><br />
+  <%= f.label :email %><br />
+  <div class="input-group field w-50">
+    <div class="input-group-prepend">
+      <span class="input-group-text">  <i class="fas fa-envelope"></i></span>
+    </div>
     <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
   </div>
 
-  <div class="field w-50">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+  <%= f.label :password %>
+  <% if @minimum_password_length %>
+  <em>(<%= @minimum_password_length %> characters minimum)</em>
+  <% end %><br />
+  <div class="input-group field w-50">
+    <div class="input-group-prepend">
+      <span class="input-group-text"><i class="fas fa-lock"></i></span>
+    </div>
     <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
   </div>
 
-  <div class="field w-50">
-    <%= f.label :password_confirmation %><br />
+ 
+  <%= f.label :password_confirmation %><br />
+  <div class="input-group field w-50">
+    <div class="input-group-prepend">
+      <span class="input-group-text"><i class="fas fa-lock"></i></span>
+    </div>
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
   </div>
 
