--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,14 +1,25 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @blog.name %>
-</p>
-
-<p>
-  <strong>Content:</strong>
-  <%= @blog.content %>
-</p>
-
-<%= link_to 'Edit', edit_blog_path(@blog) %> |
+<div class="row">
+  <div class="col-5">
+    <% @blog.images.each do |image| %>
+      <%= image_tag image.variant(resize:'300x300') %>
+    <% end %>
+  </div>
+  <div class="col-7">
+    <table class="table w-50">
+      <tbody>
+          <tr>
+            <th>ブログ名</th>
+            <td><%= @blog.name %></td>
+          </tr>
+          <tr>
+            <th>ブログ内容</th>
+            <td><%= @blog.content %></td>
+          </tr>
+      </tbody>
+    </table>
+    </div>
+</div><hr>
+<%= link_to 'Edit', edit_blog_path(@blog),class:"btn btn-success" %> |
 <%= link_to 'Back', blogs_path %>
