--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,39 @@
-<h2>アカウント登録</h2>
+<h2>アカウント登録</h2><br>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <%= f.label :email %><br />
-  <div class="input-group field w-50">
-    <div class="input-group-prepend">
-      <span class="input-group-text">  <i class="fas fa-envelope"></i></span>
+<div class="form_area">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+  
+    <%= f.label :email, style:"font-weight:bold;" %><br />
+    <div class="input-group field w-50">
+      <div class="input-group-prepend">
+        <span class="input-group-text">  <i class="fas fa-envelope"></i></span>
+      </div>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
     </div>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
-  </div>
-
-  <%= f.label :password %>
-  <% if @minimum_password_length %>
-  <em>(<%= @minimum_password_length %> characters minimum)</em>
-  <% end %><br />
-  <div class="input-group field w-50">
-    <div class="input-group-prepend">
-      <span class="input-group-text"><i class="fas fa-lock"></i></span>
+  
+    <%= f.label :password, style:"font-weight:bold;" %>
+    <% if @minimum_password_length %>
+    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <% end %><br />
+    <div class="input-group field w-50">
+      <div class="input-group-prepend">
+        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+      </div>
+      <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
     </div>
-    <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
-  </div>
-
- 
-  <%= f.label :password_confirmation %><br />
-  <div class="input-group field w-50">
-    <div class="input-group-prepend">
-      <span class="input-group-text"><i class="fas fa-lock"></i></span>
+  
+    <%= f.label :password_confirmation, style:"font-weight:bold;" %><br />
+    <div class="input-group field w-50">
+      <div class="input-group-prepend">
+        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+      </div>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
     </div>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up", class:"btn btn-primary" %>
-  </div>
-<% end %>
-
+  
+    <div class="actions">
+      <%= f.submit "登録する", class:"btn btn-primary" %>
+    </div>
+  <% end %>
 <%= render "devise/shared/links" %>
+</div>
