--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,14 @@
-  <div style="text-align:center;">
-  <h2 style="font-family:cursive;">AWS Sample App</h2>
-  </div>
-  <div style="text-align:right;">  
+<div class="header">
+    <h2 style="font-family:cursive;">AWS Sample App</h2>
+  <div class="log_in", style="text-align:right;">  
     <% if user_signed_in? %>
-      <%= link_to "ブログ投稿", blogs_path %>
+    <%= link_to user_path(current_user.id) do%>
+      <strong><i class="fas fa-user-cog"></i><%= current_user.email %></strong>
+      <% end %><span>|</span>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "新規登録", new_user_registration_path %>
       <%= link_to "ログイン", new_user_session_path %>
     <% end %>
   </div><hr> 
+</div>
