--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -30,7 +30,7 @@
 
 <div class="row">
   <div class="col-3">
-    <%= link_to '新規投稿', new_blog_path, class:"btn btn-primary" %><br><hr>
+   
     <h4 class="my-4">探す</h4>
       <div id="menu-tittle">カテゴリ検索</div>
        <ul id="sample">
@@ -39,39 +39,24 @@
           <a><%= parent.name %></a>
           <ul>
             <h3><%= parent.name %></h3>
+            <% parent.children.each do |child| %>
             <li>
-              <% parent.children.each do |child| %>
                 <a><%= child.name %></a>
               <ul class="big">
                 <h3><%= child.name %></h3>
                 <% child.children.each do |grandchild| %>
-                <li><a><%= grandchild.name %></a></li>
-                <% end %>
+                <li>
+                  <a><%= grandchild.name %></a>
+                  <% end %>
+                </li>
               </ul>
+              <% end %>
             </li>
-           <% end %>
-         </ul>
+          </ul>
          </li>
-       <% end %>
-         <li>
-           <a href="#">メインカテゴリー3</a>
-           <ul class="big">
-             <h3>メインカテゴリー3</h3>
-             <li><a href="#">サブメニュー3-1</a></li>
-             <li><a href="#">サブメニュー3-2</a></li>
-             <li><a href="#">サブメニュー3-3</a></li>
-             <li><a href="#">サブメニュー3-4</a></li>
-             <li><a href="#">サブメニュー3-5</a></li>
-             <li><a href="#">サブメニュー3-6</a></li>
-             <li><a href="#">サブメニュー3-7</a></li>
-             <li><a href="#">サブメニュー3-8</a></li>
-             <li><a href="#">サブメニュー3-9</a></li>
-             <li><a href="#">サブメニュー3-10</a></li>
-             <li><a href="#">サブメニュー3-11</a></li>
-             <li><a href="#">サブメニュー3-12</a></li>
-           </ul>
-         </li>
+        <% end %>
        </ul><hr> 
+       <%= link_to '新規投稿', new_blog_path, class:"btn btn-primary" %><br><hr>
     <div class="list-group">
       <a href="#" class="list-group-item">Category 1</a>
       <a href="#" class="list-group-item">Category 2</a>
@@ -93,7 +78,7 @@
               <div class="card-footer">
                 <div>
                   <small><%= blog.created_at.strftime('%Y/%m/%d') %>_by</small>
-                  <span style="color:black;"></span>
+                  <small style="color:black;"><%= blog.user.email %></small>
                 </div>
                 <i class="fas fa-heart unlike-btn"></i><span>　</span>
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small><br>
