--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,12 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <div class="row">
-  <div class="col-5">
+  <div class="col-3">
+  </div>
+  <div class="col-3">
     <% @blog.images.each do |image| %>
       <%= image_tag image.variant(resize:'300x300') %>
     <% end %>
   </div>
-  <div class="col-7">
+  <div class="col-6">
     <table class="table w-50">
       <tbody>
           <tr>
