--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="header">
-    <h2 style="font-family:cursive;">AWS Sample App</h2>
+    <h2 style="font-family:cursive;">Sample App</h2>
   <div class="log_in", style="text-align:right;">  
     <% if user_signed_in? %>
     <%= link_to user_path(current_user.id) do%>
