--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -98,3 +98,13 @@
 #sample ul li a{
   padding: 8px 15px;
 }
+
+.jumbo{
+  background-color: #fff;
+  padding-left: 50px;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  border-style:solid;
+  border-color: rgb(156, 156, 156);
+  
+}
