--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -2,10 +2,20 @@
   <% comments.each do |comment| %>
     <% if comment.id.present? %>
       <li>
-        <span><%= comment.content %></span><strong>　(<%= comment.user.email %>さん|<%= comment.created_at.strftime('%Y-%m-%d') %>)</strong>
-        <%= link_to edit_blog_comment_path(blog, comment), remote: true do %>
-          <i class="fas fa-edit"></i>
-        <% end %>
+        <strong>　(<%= comment.user.email %>さん)　</strong>|<i class="far fa-clock"></i><%= comment.created_at.strftime('%Y-%m-%d') %><br>
+        <div class="balloon1-left">
+          <p>こんにちは。これは例です。</p>
+          <p><%= comment.content %></p>
+            <div style="float:right;">
+             <%= link_to edit_blog_comment_path(blog, comment), remote: true do %>
+               <i class="fas fa-edit"></i>｜
+             <% end %>
+             <%= link_to blog_comment_path(comment.blog_id, comment.id), method: :delete, remote: true,
+                                             data: { confirm: "本当に削除しますか?"} do %>
+               <i class="fas fa-trash-alt"></i>
+             <% end %>
+             </div>
+        </div>
         <div class="comment-content" id ="this_comment_<%= comment.id %>"></div>
         
       </li>
