--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
   <div class="log_in", style="text-align:right;">  
     <% if user_signed_in? %>
     <%= link_to user_path(current_user.id) do%>
-      <strong><i class="fas fa-user-cog"></i><%= current_user.email %></strong>
+      <strong><i class="fas fa-home"></i><%= current_user.email %></strong>
       <% end %><span>|</span>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
     <% else %>
