--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,65 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="row">
+  <div class="col-3">
+    <h5>取引<i class="fas fa-tshirt"></i></h5>
+    <div class="list-group">
+   
+      <span class="list-group-item">投稿する</span>
+    
+      <span class="list-group-item">投稿中アイテム</span>
+      <span class="list-group-item">売却済み</span>
+    </div><br><br><br>
+
+    <h5>探す<i class="fas fa-list"></i></h5>
+    <div class="list-group">
+      <%= link_to blogs_path do %>
+        <span class="list-group-item">みんなの投稿</span>
+        <% end %>
+      <%= link_to users_path do %>
+        <span class="list-group-item">ユーザー一覧</span>
+      <% end %>
+      <span class="list-group-item">Search</span>
+      <span class="list-group-item">Search</span>
+    </div><br><br><br>
+
+    <h5>設定<i class="fas fa-user-cog"></i></h5>
+    <div class="list-group">
+     
+        <span class="list-group-item">プロフィール編集する</span>
+     
+      <span class="list-group-item">お届け先を変更<i class="fas fa-map-marker-alt"></i></span>
+      <span class="list-group-item">setting</span>
+      <span class="list-group-item">お問い合わせ</span>
+    </div><br><br><br><br><br><br><br><br>
+  </div>
+  <div class="col-9">
+    <div class="jumbotron bg-info">
+      <div class="row">
+        <div class="col-3">
+          <i class="fas fa-user-circle"></i>
+        </div>
+        <div class="col-9">
+          <table class="table w-75">
+           <tbody>
+             <tr>
+               <th>ユーザーid</th>
+               <td><%= @user.id %></td>
+             </tr>
+              <tr>
+                <th>ユーザー名</th>
+                <td>　</td>
+              </tr>
+              <tr>
+                <th>メールアドレス</th>
+                <td><%= @user.email %></td>
+              </tr>
+              <tr></tr>
+            </tbody>
+          </table>
+
+        </div>
+      </div>
+   </div>
+   
+    <h4>フォロー中のユーザー<i class="fas fa-users"></i></h4><br>
+  </div>
+</div>
