--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -21,7 +21,8 @@
   max-width: 100%;
   color: #555;
   font-size: 16px;
-  background: #e0edff;
+  // background: #e0edff;
+  background: #d4d8dd;
 }
 
 .balloon1-left:before {
