--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -18,7 +18,7 @@
 #sample{
   position: relative;
   z-index: 100;
-  width: 200px;
+  width: 150px;
   margin: 0 0 20px 0px;
   padding: 10px 0;
   border-top: 3px solid #2f3842;
@@ -104,7 +104,7 @@
   padding-left: 50px;
   padding-top: 50px;
   padding-bottom: 100px;
-  border-style:solid;
+  // border: solid 0.5px ;
   border-color: rgb(156, 156, 156);
   
 }
