--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,96 +1,68 @@
 <p id="notice"><%= notice %></p>
-
-<div id="carouselExampleIndicators" class="carousel slide my-4 " data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <img class="d-block img-fluid" src="/assets/pc.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block img-fluid" src="/assets/pc-2.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block img-fluid" src="/assets/pc.jpg" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-
+<br>
 <div class="row">
   <div class="col-3">
-   
-    <h4 class="my-4">探す</h4>
-      <div id="menu-tittle"><i class="fas fa-list" style="color:orange;"></i>　カテゴリ検索</div>
-       <ul id="sample">
-        <% @parents.each do |parent| %>
-        <li>
-          <a><%= parent.name %></a>
-          <ul>
-            <h3><%= parent.name %></h3>
-            <% parent.children.each do |child| %>
-            <li>
-                <a><%= child.name %></a>
-              <ul class="big">
-                <h3><%= child.name %></h3>
-                <% child.children.each do |grandchild| %>
-                <li>
-                  <a><%= grandchild.name %></a>
-                  <% end %>
-                </li>
-              </ul>
-              <% end %>
-            </li>
-          </ul>
-         </li>
-        <% end %>
-       </ul><hr> 
-       <%= link_to '新規投稿', new_blog_path, class:"btn btn-primary" %><br><hr>
-    <div class="list-group">
-      <a href="#" class="list-group-item">Category 1</a>
-      <a href="#" class="list-group-item">Category 2</a>
-      <a href="#" class="list-group-item">Category 3</a>
-    </div><br>
-     <br><br><br><br><br><br><br><br><br><br><br><hr>
+    <%= render 'layouts/menu2' %>
+    <span>　　　</span><%= link_to '新規投稿', new_blog_path, class:"btn btn-outline-primary" %>
   </div>
-  <div class="col-9">
-    <h3>ブログ一覧</h3><br>
+
+  <div class="col-9"><br>
     <div class="row row-cols-2 row-cols-md-3 g-4">
     <% @blogs.each do |blog| %>
         <div class="col mb-3">
           <div class="card h-100 shadow">
             <% blog.images.each do |image| %>
               <%= link_to blog do %>
-              <p class="card-img-top"><%= image_tag image.variant(resize:'250x300') %></p>
+              <p class="card-img-top"><%= image_tag image.variant(resize:'180x250') %></p>
               <% end %>
             <% end %>
             <div class="card-body text-secondary">
               
-              <div class="card-footer">
+              <div class="card-footer" style="padding:0;">
                 <div>
-                <i class="far fa-clock"></i>
                   <small><%= blog.created_at.strftime('%Y/%m/%d') %>_by</small>
                   <small style="color:black;"><%= blog.user.email %></small>
+                  <%= link_to blog_path(blog.id), method: :delete, data: {confirm: "本当に削除していいですか？"} do %>
+                    <i class="fas fa-trash-alt"></i>
+                  <% end %>
+
                 </div>
                 <i class="fas fa-heart unlike-btn"></i><span>　</span>
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small><br>
-                <%= link_to '削除', blog_path(blog.id), class: "btn btn-outline-danger btn-sm" , method: :delete, data: {confirm: "本当に削除していいですか？"} %>
+                
               </div>
             </div>
           </div>
         </div>
       <% end %>
     </div><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div id="carouselExampleIndicators" class="carousel slide my-4 " data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <img class="d-block img-fluid" src="/assets/pc.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="/assets/pc-2.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="/assets/pc.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
+  
 </div>
