--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,10 +11,10 @@
   <% end %>
 
   <div class="field w-75">
-    <%= form.label :content %>
-    <%= form.text_area :content,  placeholder: "コメントを投稿する...", class:"form-control" %>
+  <p style="background-color:#fff6de;">相手のことを考え丁寧なコメントを心がけましょう。不快な言葉遣いなどは利用制限や退会処分となることがあります。</p>
+    <%= form.text_area :content,  placeholder: "コメントを入力...", class:"form-control" %>
     <div class="actions">
-    <%= form.submit"コメント投稿", class:"btn btn-primary btn-block" %>
+    <%= form.submit"コメントする", class:"btn btn-primary btn-block" %>
     </div>
   </div><i class="far fa-comment-dots" style="font-size:30px;"></i><i class="far fa-comments" style="font-size:30px;"></i>
   
