--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <%= content_tag(:div, value, class: "#{key}") %>
       <% end %>
     </div>
-    <%= render 'layouts/header' %>
+    <%= render 'layouts/header' %><br>
     <div class="container">
     <%= yield %>
     </div>
