--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,6 +1,30 @@
 // Place all the styles related to the blogs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.new_blog{
+  position: fixed;
+  padding: 32px;
+  border-radius: 50%;
+  background-color:rgb(29, 28, 49);
+  z-index: 5;
+  width: 130px;
+  height: 130px;
+  text-align: center;
+  bottom: 32px;
+  left: 32px;
+  cursor: pointer;
+}
+.submit p{
+  font-size: 18px;
+  margin:0;
+  color:rgb(255, 255, 255);
+}
+.fa-camera{
+  font-size: 50px;
+  color:rgb(255, 255, 255);
+}
+
 .card-body.text-secondary{
   padding: 0;
 }
@@ -27,6 +51,7 @@
   font-size: 14px;
   background: #fff;
   color:#333;
+  cursor: pointer;
 }
 #sample li{
   list-style-type : none;
