--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -6,23 +6,23 @@
   position: fixed;
   padding: 32px;
   border-radius: 50%;
-  background-color:rgb(29, 28, 49);
+  background-color:#202933;
   z-index: 5;
   width: 130px;
   height: 130px;
   text-align: center;
   bottom: 32px;
-  left: 32px;
+  left: 72px;
   cursor: pointer;
 }
 .submit p{
-  font-size: 18px;
+  font-size: 16px;
   margin:0;
   color:rgb(255, 255, 255);
 }
 .fa-camera{
   font-size: 50px;
-  color:rgb(255, 255, 255);
+  color:rgb(255, 123, 0);
 }
 
 .card-body.text-secondary{
