--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,12 +1,11 @@
 <p id="notice"><%= notice %></p>
-<br>
 <div class="row">
   <div class="col-3">
     <%= render 'layouts/menu2' %>
     
       <div class="new_blog">
-        <div class="submit">
         <%= link_to new_blog_path do %>
+        <div class="submit">
           <p>POST</p>
         <i class="fas fa-camera"></i>
         <% end %>
@@ -16,6 +15,33 @@
   </div>
 
   <div class="col-9"><br>
+    <div id="carouselExampleIndicators" class="carousel slide my-4 " data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <img class="d-block img-fluid" src="/assets/Untitled Diagram-Page-2.png" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="/assets/Untitled Diagram-Page-2" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="/assets/Untitled Diagram-Page-2" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
     <div class="row row-cols-2 row-cols-md-3 g-4">
     <% @blogs.each do |blog| %>
         <div class="col mb-3">
@@ -46,32 +72,7 @@
       <% end %>
     </div><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<div id="carouselExampleIndicators" class="carousel slide my-4 " data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <img class="d-block img-fluid" src="/assets/pc.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="/assets/pc-2.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="/assets/pc.jpg" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
+   
   </div>
   
 </div>
