--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
   </head>
 
   <body>
+    <%= render 'layouts/header' %>
     <div>
       <% flash.each do |key, value| %>
         <%= content_tag(:div, value, class: "#{key}") %>
       <% end %>
-    </div>
-    <%= render 'layouts/header' %><br>
+    </div><br>
     <div class="container">
     <%= yield %>
     </div>
