--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,6 +84,10 @@ body{
   text-decoration: none;
   width: 100%;
 }
+
+.gnav li:hover > a{
+  background-color:#ff9022;
+}
 /*子階層以降共通*/
 .gnav li li {
   height: 0;
