--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,21 +1,24 @@
 
   <ul class="gnav">
     <% @parents.each do |parent| %>
-      <li><a><%= parent.name %></a>
+      <li><%= link_to category_path(parent.id) do %>
+        <%= parent.name %>
+        <% end %>
         <ul>
         <% parent.children.each do |child| %>
-          <li><a><%= child.name %></a>
+          <li><%= link_to category_path(child.id) do %>
+              <%= child.name %>
+              <% end %>
             <ul>
             <% child.children.each do |grandchild| %>
-              <li><a><%= grandchild.name %></a></li>
+              <li><%= link_to category_path(grandchild.id) do %>
+                  <%= grandchild.name %>
+                  <% end %>
+              </li>
             <% end %>
             </ul>
           </li>
           <% end %>
-          <li><a href="">Child2</a></li>
-          <li><a href="">Child3</a></li>
-          <li><a href="">Child4</a></li>
-          <li><a href="">Child5</a></li>
         </ul>
       </li>
       <% end %>
