--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,11 @@
 
 body{
   background-color: rgb(240, 240, 240);
+  
+}
+
+.container{
+  padding-top: 150px;
 }
 
 .header{
@@ -24,6 +29,9 @@ body{
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.16);
   // text-align : center
   display: flex;
+  position: fixed;
+  width: 100%;
+  z-index: 500;
 }
 
 .icon{
