--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -55,8 +55,8 @@
          </tbody>
        </table>
       </div>
-    <button class="btn btn-danger" style="float:right;">購入する</button>
     </div>
+    <%= link_to "購入画面にすすむ", purchase_blog_path(@blog), class: "btn btn-info btn-lg btn-block align-items-end" %>
   </div>
   <div class="col-1">
   </div>
