--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -14,7 +14,7 @@
   <p style="background-color:#fff6de;">相手のことを考え丁寧なコメントを心がけましょう。不快な言葉遣いなどは利用制限や退会処分となることがあります。</p>
     <%= form.text_area :content,  placeholder: "コメントを入力...", class:"form-control" %>
     <div class="actions">
-    <%= form.submit"コメントする", class:"btn btn-primary btn-block" %>
+    <%= form.submit"コメントする", class:"btn btn-dark btn-block" %>
     </div>
   </div><i class="far fa-comment-dots" style="font-size:30px;"></i><i class="far fa-comments" style="font-size:30px;"></i>
   
